<resources>
    <string name="app_name">User Manager</string>
    <string name="insert_user">Insertar Usuarios</string>
    <string name="list_user">Listar Usuarios</string>
    <string name="nacionality">Nacionalidad</string>
    <string name="number_user_placeholder">Número de usuarios a insertar</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="date_placeholder">DD/MM/YYYY</string>
    <string name="genre">Sexo</string>
    <string name="register_date">Fecha de Registo</string>
    <string name="insert_top_instruction">Rellena los campos dependiendo del tipo de usuarios que quieras introducir</string>
    <string name="list_no_users">No hay usuarios actualmente</string>
    <string name="principal_borrar_bbdd">Borrar Base de datos entera</string>
    <string name="list_photo">Fotografía de la persona</string>
    <string name="profile_pic">Profile pic</string>
    <string name="example">Ejemplo</string>
    <string name="localizaci_n">Localización:</string>
    <string name="nombre">Nombre:</string>
    <string name="g_nero">Género:</string>
    <string name="registrado_en">Registro:</string>
    <string name="borrar_usuario">Borrar usuario</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="usuario">Usuario:</string>
    <string name="nationality">Nationality:</string>
    <string name="modificar_usuario">Modificar Usuario</string>
    <string name="borrar_single">Borrar Usuario</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="cancelar">Cancelar</string>
    <string name="localizacion">Localizacion:</string>
    <string name="nombreSP">Nombre</string>
    <string name="usuarioSP">Usuario</string>
    <string name="contrase_aSP">Contraseña</string>
    <string name="nacionalidadSP">Nacionalidad</string>
    <string name="option">Elige una opcion</string>
    <string name="insert_user_principal">Inserta un usuario</string>
    <string name="listed_users">Lista de usuarios</string>
    <string name="specific_label">Usuario específico</string>
    <string name="modify_label">Modifica el usuario</string>
    <string-array name="nationalities">
        <item>Nacionalidad</item>
        <item>AU: Australia</item>
        <item>BR: Brazil</item>
        <item>CA: Canada</item>
        <item>CH: China</item>
        <item>DE: Germany </item>
        <item>DK: Denmark </item>
        <item>ES: Spain  </item>
        <item>FI: Finland  </item>
        <item>FR: France</item>
        <item>GB: British </item>
        <item>IE: Ireland </item>
        <item>IR: Iran  </item>
        <item>NL: Netherlands</item>
        <item>NZ: New Zealand</item>
        <item>TR: Turkey</item>
        <item>US: United States</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="listusr">Listar Usuario</string>
    <string name="insertar">Insertar</string>
    <string name="listar">Listar</string>
    <string name="borrar_base_de_datos">Borrar base de datos</string>
    <string name="ubi">Ubicacion</string>
    <string name="login_text">Introduce tus credenciales para acceder a la aplicación</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="login">Inicio de Sesión</string>
    <string name="borrar_shared_preferences">Borrar Shared Preferences</string>
    <string name="borrar_shared_prefs">Borrar Shared Prefs</string>

</resources>
