<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.g81vdbvf.usermanager.InsertUser">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="331dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/insert_top_instruction"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/nacionality"
        android:layout_width="174dp"
        android:layout_height="47dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nacionality"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/numUsers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/numUsers"
        android:layout_width="286dp"
        android:layout_height="43dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/number_user_placeholder"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/checkFemale"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/checkMale"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/checkMale"
        android:layout_width="90dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/male"
        app:layout_constraintBottom_toTopOf="@+id/numUsers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nacionality"
        app:layout_constraintVertical_bias="0.79" />

    <CheckBox
        android:id="@+id/checkFemale"
        android:layout_width="92dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/female"
        app:layout_constraintBottom_toTopOf="@+id/numUsers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/checkMale"
        app:layout_constraintTop_toBottomOf="@+id/nacionality"
        app:layout_constraintVertical_bias="0.755" />

    <EditText
        android:id="@+id/regDate"
        android:layout_width="153dp"
        android:layout_height="47dp"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/date_placeholder"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/genre"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/numUsers"
        app:layout_constraintEnd_toEndOf="@+id/checkFemale"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/checkMale"
        app:layout_constraintTop_toBottomOf="@+id/nacionality"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="159dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_date"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/regDate"
        app:layout_constraintEnd_toEndOf="@+id/numUsers"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/numUsers"
        app:layout_constraintTop_toBottomOf="@+id/numUsers"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/insertCallAPI"
        android:layout_width="265dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#000"
        android:drawableStart="@drawable/ic_person_add_white_36dp"
        android:drawableTint="#FFF"
        android:text="@string/insert_user"
        android:textColor="#FFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regDate"
        app:layout_constraintVertical_bias="0.333" />


</android.support.constraint.ConstraintLayout>
