<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.g81vdbvf.usermanager.ModUser"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/nombreSP"
        app:layout_constraintBottom_toTopOf="@+id/mod_nombre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/mod_nombre"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:hint="@string/example"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/usuarioSP"
        app:layout_constraintBottom_toTopOf="@+id/mod_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_nombre" />

    <EditText
        android:id="@+id/mod_user"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:hint="@string/example"
        app:layout_constraintBottom_toTopOf="@+id/mod_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_nombre"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/contrase_aSP"
        app:layout_constraintBottom_toTopOf="@+id/mod_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_user" />

    <EditText
        android:id="@+id/mod_pass"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/example"
        app:layout_constraintBottom_toTopOf="@+id/mod_nationality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/mod_ok"
        android:layout_width="166dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_save_white_36dp"
        android:drawableTint="#FFF"
        android:text="@string/guardar_cambios"
        android:backgroundTint="#000"
        android:textColor="#FFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_nationality"
        app:layout_constraintVertical_bias="0.662" />

    <Button
        android:id="@+id/mod_cancel"
        android:layout_width="108dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancelar"
        android:textColor="#FFF"

        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/mod_ok"
        app:layout_constraintTop_toBottomOf="@+id/mod_nationality"
        app:layout_constraintVertical_bias="0.661" />

    <Spinner
        android:id="@+id/mod_nationality"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginBottom="144dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nacionality"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/nacionalidadSP"
        app:layout_constraintBottom_toTopOf="@+id/mod_nationality"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_pass" />


</android.support.constraint.ConstraintLayout>
