<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.g81vdbvf.usermanager.InicioSesion">

    <EditText
        android:id="@+id/log_usr"
        android:layout_width="240dp"
        android:layout_height="68dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/usuarioSP"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/log_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/log_pass"
        android:layout_width="240dp"
        android:layout_height="68dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/contrase_aSP"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/log_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="349dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/log_usr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/log_button"
        android:layout_width="248dp"
        android:layout_height="57dp"
        android:layout_marginBottom="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#000"
        android:drawableStart="@drawable/ic_subdirectory_arrow_left_white_36dp"
        android:text="@string/iniciar_sesi_n"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="login"/>

</android.support.constraint.ConstraintLayout>
